@@ -818,11 +818,10 @@ dnl AC_CHECK_TOOL(AR, ar, :)
 		if test "x${MSSDK}x" = "xx" ; then
 		    MSSDK="C:/Progra~1/Microsoft SDK"
 		fi
-		# In order to work in the tortured autoconf environment,
-		# we need to ensure that this path has no spaces
-		MSSDK=`cygpath -w -s "$MSSDK" | sed -e 's!\\\!/!g'`
+		# Ensure that this path has no spaces to work in autoconf
+		TEA_PATH_NOSPACE(MSSDK, ${MSSDK})
 		if test ! -d "${MSSDK}/bin/win64" ; then
-		    AC_MSG_WARN("could not find 64-bit SDK to enable 64bit mode")
+		    AC_MSG_WARN([could not find 64-bit SDK to enable 64bit mode])
 		    do64bit="no"
 		else
 		    do64bit_ok="yes"
@@ -837,25 +836,28 @@ dnl AC_CHECK_TOOL(AR, ar, :)
 		    AC_MSG_ERROR([Windows/CE and GCC builds incompatible])
 		fi
 		TEA_PATH_CELIB
-		# set defaults
-		# Currently Tcl requires 300+
-		CEVERSION=300;	  # could be 211 300 301 ...
-		TARGETCPU=ARM;	  # could be ARM MIPS SH3 X86 ...
-		PLATFORM="Pocket PC 2002"
-		if test "$doWince" = "yes"; then
-		    doWince="300,ARM,ARM,Pocket PC 2002"
-		fi
-		eval `echo $doWince | awk -F "," '{ \
-		    if (length([$]1)) { printf "CEVERSION=\"%s\"\n", [$]1; \
-		      if ([$]1 >= 400) { printf "PLATFORM=\"Pocket PC 2003\"\n" } }; \
-		    if (length([$]2)) { printf "TARGETCPU=\"%s\"\n", toupper([$]2) }; \
-		    if (length([$]3)) { printf "ARCH=\"%s\"\n", toupper([$]3) }; \
-		    if (length([$]4)) { printf "PLATFORM=\"%s\"\n", [$]4 }; \
+		# Set defaults for common evc4/PPC2003 setup
+		# Currently Tcl requires 300+, possibly 420+ for sockets
+		CEVERSION=420; 		# could be 211 300 301 400 420 ...
+		TARGETCPU=ARMV4;	# could be ARMV4 ARM MIPS SH3 X86 ...
+		ARCH=ARM;		# could be ARM MIPS X86EM ...
+		PLATFORM="Pocket PC 2003"; # or "Pocket PC 2002"
+		if test "$doWince" != "yes"; then
+		    # If !yes then the user specified something
+		    # Reset ARCH to allow user to skip specifying it
+		    ARCH=
+		    eval `echo $doWince | awk -F, '{ \
+	    if (length([$]1)) { printf "CEVERSION=\"%s\"\n", [$]1; \
+	    if ([$]1 < 400)   { printf "PLATFORM=\"Pocket PC 2002\"\n" } }; \
+	    if (length([$]2)) { printf "TARGETCPU=\"%s\"\n", toupper([$]2) }; \
+	    if (length([$]3)) { printf "ARCH=\"%s\"\n", toupper([$]3) }; \
+	    if (length([$]4)) { printf "PLATFORM=\"%s\"\n", [$]4 }; \
 		    }'`
-		OSVERSION=WCE$CEVERSION;
-		if test "x${ARCH}" = "x" ; then
-	            ARCH=$TARGETCPU;  # could be ARM MIPS SH3 X86 X86EM ...
+		    if test "x${ARCH}" = "x" ; then
+			ARCH=$TARGETCPU;
+		    fi
 		fi
+		OSVERSION=WCE$CEVERSION;
 	    	if test "x${WCEROOT}" = "x" ; then
 			WCEROOT="C:/Program Files/Microsoft eMbedded C++ 4.0"
 		    if test ! -d "${WCEROOT}" ; then
@@ -868,21 +870,21 @@ dnl AC_CHECK_TOOL(AR, ar, :)
 			SDKROOT="C:/Windows CE Tools"
 		    fi
 		fi
-		# In order to work in the tortured autoconf environment,
-		# we need to ensure that this path has no spaces
-		WCEROOT=`cygpath -w -s "$WCEROOT" | sed -e 's!\\\!/!g'`
-		SDKROOT=`cygpath -w -s "$SDKROOT" | sed -e 's!\\\!/!g'`
-		CELIB_DIR=`cygpath -w -s "$CELIB_DIR" | sed -e 's!\\\!/!g'`
+		# Ensure that this path has no spaces to work in autoconf
+		TEA_PATH_NOSPACE(WCEROOT, ${WCEROOT})
+		TEA_PATH_NOSPACE(SDKROOT, ${SDKROOT})
 		if test ! -d "${SDKROOT}/${OSVERSION}/${PLATFORM}/Lib/${TARGETCPU}" \
 		    -o ! -d "${WCEROOT}/EVC/${OSVERSION}/bin"; then
 		    AC_MSG_ERROR([could not find PocketPC SDK or target compiler to enable WinCE mode [$CEVERSION,$TARGETCPU,$ARCH,$PLATFORM]])
 		    doWince="no"
 		else
-		    CEINCLUDE=`cygpath -w -s "${SDKROOT}/${OSVERSION}/${PLATFORM}/include" | sed -e 's!\\\!/!g'`
+		    # We could PATH_NOSPACE these, but that's not important,
+		    # as long as we quote them when used.
+		    CEINCLUDE="${SDKROOT}/${OSVERSION}/${PLATFORM}/include"
 		    if test -d "${CEINCLUDE}/${TARGETCPU}" ; then
 			CEINCLUDE="${CEINCLUDE}/${TARGETCPU}"
 		    fi
-		    CELIBPATH=`cygpath -w -s "${SDKROOT}/${OSVERSION}/${PLATFORM}/Lib/${TARGETCPU}" | sed -e 's!\\\!/!g'`
+		    CELIBPATH="${SDKROOT}/${OSVERSION}/${PLATFORM}/Lib/${TARGETCPU}"
     		fi
 	    fi
 
@@ -895,15 +897,14 @@ dnl AC_CHECK_TOOL(AR, ar, :)
 
                 if test "$do64bit" = "yes" ; then
 		    # All this magic is necessary for the Win64 SDK RC1 - hobbs
-		    export CC="${MSSDK}/Bin/Win64/cl.exe \
-	                -I${MSSDK}/Include/prerelease \
-                        -I${MSSDK}/Include/Win64/crt \
-	                -I${MSSDK}/Include"
-		    export RC="${MSSDK}/bin/rc.exe"
-		    export lflags="-MACHINE:IA64 -LIBPATH:${MSSDK}/Lib/IA64 \
-	                -LIBPATH:${MSSDK}/Lib/Prerelease/IA64"
-		    export STLIB_LD="${MSSDK}/bin/win64/lib.exe -nologo ${lflags}"
-		    export LINKBIN="${MSSDK}/bin/win64/link.exe ${lflags}"
+		    CC="${MSSDK}/Bin/Win64/cl.exe"
+		    CFLAGS="${CFLAGS} -I${MSSDK}/Include/prerelease \
+			-I${MSSDK}/Include/Win64/crt \
+			-I${MSSDK}/Include"
+		    RC="${MSSDK}/bin/rc.exe"
+		    lflags="-MACHINE:IA64 -LIBPATH:${MSSDK}/Lib/IA64 \
+			-LIBPATH:${MSSDK}/Lib/Prerelease/IA64 -nologo"
+		    LINKBIN="${MSSDK}/bin/win64/link.exe"
 		    CFLAGS_DEBUG="-nologo -Zi -Od -W3 ${runtime}d"
 		    CFLAGS_OPTIMIZE="-nologo -O2 -W2 ${runtime}"
 		elif test "$doWince" != "no" ; then
@@ -913,7 +914,7 @@ dnl AC_CHECK_TOOL(AR, ar, :)
 		    else
 			CC="${CEBINROOT}/cl${ARCH}.exe"
 		    fi
-		    CC="${CC} -I\"${CELIB_DIR}/inc\" -I\"${CEINCLUDE}\""
+		    CFLAGS="$CFLAGS -I\"${CELIB_DIR}/inc\" -I\"${CEINCLUDE}\""
 		    RC="${WCEROOT}/Common/EVC/bin/rc.exe"
 		    arch=`echo ${ARCH} | awk '{print tolower([$]0)}'`
 		    defs="${ARCH} _${ARCH}_ ${arch} PALM_SIZE _MT _DLL _WINDOWS"
@@ -925,13 +926,12 @@ dnl AC_CHECK_TOOL(AR, ar, :)
 		    CFLAGS_DEBUG="-nologo -Zi -Od"
 		    CFLAGS_OPTIMIZE="-nologo -Ox"
 		    lversion=`echo ${CEVERSION} | sed -e 's/\(.\)\(..\)/\1\.\2/'`
-		    lflags="-MACHINE:${ARCH} -LIBPATH:\"${CELIBPATH}\" -subsystem:windowsce,${lversion}"
-		    STLIB_LD="${CEBINROOT}/lib.exe -nologo ${lflags}"
-		    LINKBIN="${CEBINROOT}/link.exe ${lflags}"
+		    lflags="-MACHINE:${ARCH} -LIBPATH:\"${CELIBPATH}\" -subsystem:windowsce,${lversion} -nologo"
+		    LINKBIN="${CEBINROOT}/link.exe"
 		    AC_SUBST(CELIB_DIR)
 		else
 		    RC="rc"
-		    STLIB_LD="link -lib -nologo"
+		    lflags="-nologo"
     		    LINKBIN="link"
 		    CFLAGS_DEBUG="-nologo -Z7 -Od -W3 -WX ${runtime}d"
 		    CFLAGS_OPTIMIZE="-nologo -O2 -W2 ${runtime}"
@@ -948,7 +948,9 @@ dnl AC_CHECK_TOOL(AR, ar, :)
 		LDFLAGS_CONSOLE="-wl,--subsystem,console ${lflags}"
 		LDFLAGS_WINDOW="-wl,--subsystem,windows ${lflags}"
 	    else
-		SHLIB_LD="${LINKBIN} -dll -nologo"
+		SHLIB_LD="${LINKBIN} -dll ${lflags}"
+		# link -lib only works when -lib is the first arg
+		STLIB_LD="${LINKBIN} -lib ${lflags}"
 		UNSHARED_LIB_SUFFIX='${TCL_TRIM_DOTS}.lib'
 		PATHTYPE=-w
 		# For information on what debugtype is most useful, see:
@@ -1378,14 +1380,14 @@ dnl AC_CHECK_TOOL(AR, ar, :)
 		;;
 	    esac
 	    ;;
-	Rhapsody-*|Darwin-*)
+	Darwin-*)
 	    SHLIB_CFLAGS="-fno-common"
 	    SHLIB_LD="cc -dynamiclib \${LDFLAGS}"
 	    SHLIB_LD_LIBS='${LIBS}'
 	    SHLIB_SUFFIX=".dylib"
 	    DL_OBJS="tclLoadDyld.o"
 	    DL_LIBS=""
-	    LDFLAGS="$LDFLAGS -prebind"
+	    LDFLAGS="$LDFLAGS -prebind -Wl,-search_paths_first"
 	    LD_SEARCH_FLAGS=""
 	    LD_LIBRARY_PATH_VAR="DYLD_LIBRARY_PATH"
 	    CFLAGS_OPTIMIZE="-Os"
@@ -1567,7 +1569,15 @@ dnl AC_CHECK_TOOL(AR, ar, :)
 		arch=`isainfo`
 		if test "$arch" = "sparcv9 sparc" ; then
 			if test "$GCC" = "yes" ; then
-			    AC_MSG_WARN("64bit mode not supported with GCC on $system")
+			    if test "`gcc -dumpversion` | awk -F. '{print $1}'" -lt "3" ; then
+				AC_MSG_WARN([64bit mode not supported with GCC < 3.2 on $system])
+			    else
+				do64bit_ok=yes
+				CFLAGS="$CFLAGS -m64 -mcpu=v9"
+				LDFLAGS="$LDFLAGS -m64 -mcpu=v9"
+				SHLIB_CFLAGS="-fPIC"
+				SHLIB_LD_FLAGS=""
+			    fi
 			else
 			    do64bit_ok=yes
 			    if test "$do64bitVIS" = "yes" ; then
@@ -1593,6 +1603,17 @@ dnl AC_CHECK_TOOL(AR, ar, :)
 	    if test "$GCC" = "yes" ; then
 		SHLIB_LD="$CC -shared"
 		LD_SEARCH_FLAGS='-Wl,-R,${LIB_RUNTIME_DIR}'
+		if test "$do64bit" = "yes" ; then
+		    # We need to specify -static-libgcc or we need to
+		    # add the path to the sparv9 libgcc.
+		    # JH: static-libgcc is necessary for core Tcl, but may
+		    # not be necessary for extensions.
+		    SHLIB_LD="$SHLIB_LD -m64 -mcpu=v9 -static-libgcc"
+		    # for finding sparcv9 libgcc, get the regular libgcc
+		    # path, remove so name and append 'sparcv9'
+		    #v9gcclibdir="`gcc -print-file-name=libgcc_s.so` | ..."
+		    #LD_SEARCH_FLAGS="${LD_SEARCH_FLAGS},-R,$v9gcclibdir"
+		fi
 	    else
 		SHLIB_LD="/usr/ccs/bin/ld -G -z text"
 		LD_SEARCH_FLAGS='-R ${LIB_RUNTIME_DIR}'
@@ -1749,7 +1770,7 @@ dnl AC_CHECK_TOOL(AR, ar, :)
 		    ;;
 		NetBSD-*|FreeBSD-*)
 		    ;;
-		Rhapsody-*|Darwin-*)
+		Darwin-*)
 		    ;;
 		RISCos-*)
 		    ;;
@@ -2552,7 +2573,9 @@ AC_DEFUN(TEA_TCL_64BIT_FLAGS, [
 #------------------------------------------------------------------------
 
 AC_DEFUN(TEA_INIT, [
-    TEA_VERSION="3.1"
+    # TEA extensions pass this us the version of TEA they think they
+    # are compatible with.
+    TEA_VERSION="3.2"
 
     AC_MSG_CHECKING([for correct TEA configuration])
     if test x"${PACKAGE_NAME}" = x ; then
@@ -2777,7 +2800,9 @@ AC_DEFUN(TEA_ADD_INCLUDES, [
 # TEA_ADD_LIBS --
 #
 #	Specify one or more libraries.  Users should check for
-#	the right platform before adding to their list.
+#	the right platform before adding to their list.  For Windows,
+#	libraries provided in "foo.lib" format will be converted to
+#	"-lfoo" when using GCC (mingw).
 #
 # Arguments:
 #	one or more file names
@@ -2790,6 +2815,10 @@ AC_DEFUN(TEA_ADD_INCLUDES, [
 AC_DEFUN(TEA_ADD_LIBS, [
     vars="$@"
     for i in $vars; do
+	if test "${TEA_PLATFORM}" = "windows" -a "$GCC" = "yes" ; then
+	    # Convert foo.lib to -lfoo for GCC.  No-op if not *.lib
+	    i=`echo "$i" | sed -e 's/\(.*\)\.lib[$]/-l\1/i'`
+	fi
 	PKG_LIBS="$PKG_LIBS $i"
     done
     AC_SUBST(PKG_LIBS)
@@ -3398,12 +3427,15 @@ AC_DEFUN(TEA_PUBLIC_TK_HEADERS, [
 #------------------------------------------------------------------------
 
 AC_DEFUN(TEA_PROG_TCLSH, [
-    AC_MSG_CHECKING([for tclsh])
+    # Allow the user to provide this setting in the env
+    if test "x${TCLSH_PROG}" = "x" ; then
+	AC_MSG_CHECKING([for tclsh])
 
-    AC_CACHE_VAL(ac_cv_path_tclsh, [
-	if test "x${CELIB_DIR}" != "x" ; then
-	    # If CELIB_DIR is defined, assume Windows/CE target is requested
-	    # which means target tclsh cannot be run (cross-compile)
+	AC_CACHE_VAL(ac_cv_path_tclsh, [
+	if test "${TEA_PLATFORM}" = "windows" -a "$do64bit_ok" = "yes" \
+		-o "$doWince" != "no" ; then
+	    # A Windows cross-compile build - restrict target tclsh
+	    # as we need one we can run on this system
 	    search_path=`echo ${PATH} | sed -e 's/:/ /g'`
 	else
 	    search_path=`echo ${TCL_BIN_DIR}:${TCL_BIN_DIR}/../bin:${exec_prefix}/bin:${prefix}/bin:${PATH} | sed -e 's/:/ /g'`
@@ -3419,13 +3451,14 @@ AC_DEFUN(TEA_PROG_TCLSH, [
 		fi
 	    done
 	done
-    ])
+	])
 
-    if test -f "$ac_cv_path_tclsh" ; then
-	TCLSH_PROG=$ac_cv_path_tclsh
-	AC_MSG_RESULT([$TCLSH_PROG])
-    else
-	AC_MSG_ERROR([No tclsh found in PATH:  $search_path])
+	if test -f "$ac_cv_path_tclsh" ; then
+	    TCLSH_PROG=$ac_cv_path_tclsh
+	    AC_MSG_RESULT([$TCLSH_PROG])
+	else
+	    AC_MSG_ERROR([No tclsh found in PATH: $search_path])
+	fi
     fi
     AC_SUBST(TCLSH_PROG)
 ])
@@ -3447,12 +3480,15 @@ AC_DEFUN(TEA_PROG_TCLSH, [
 #------------------------------------------------------------------------
 
 AC_DEFUN(TEA_PROG_WISH, [
-    AC_MSG_CHECKING([for wish])
+    # Allow the user to provide this setting in the env
+    if test "x${WISH_PROG}" = "x" ; then
+	AC_MSG_CHECKING([for wish])
 
-    AC_CACHE_VAL(ac_cv_path_wish, [
-	if test "x${CELIB_DIR}" != "x" ; then
-	    # If CELIB_DIR is defined, assume Windows/CE target is requested
-	    # which means target wish cannot be run (cross-compile)
+	AC_CACHE_VAL(ac_cv_path_wish, [
+	if test "${TEA_PLATFORM}" = "windows" -a "$do64bit_ok" = "yes" \
+		-o "$doWince" != "no" ; then
+	    # A Windows cross-compile build - restrict target tclsh
+	    # as we need one we can run on this system
 	    search_path=`echo ${PATH} | sed -e 's/:/ /g'`
 	else
 	    search_path=`echo ${TK_BIN_DIR}:${TK_BIN_DIR}/../bin:${TCL_BIN_DIR}:${TCL_BIN_DIR}/../bin:${exec_prefix}/bin:${prefix}/bin:${PATH} | sed -e 's/:/ /g'`
@@ -3468,13 +3504,14 @@ AC_DEFUN(TEA_PROG_WISH, [
 		fi
 	    done
 	done
-    ])
+	])
 
-    if test -f "$ac_cv_path_wish" ; then
+	if test -f "$ac_cv_path_wish" ; then
 	WISH_PROG=$ac_cv_path_wish
-	AC_MSG_RESULT([$WISH_PROG])
-    else
-	AC_MSG_ERROR([No wish found in PATH:  $search_path])
+	    AC_MSG_RESULT([$WISH_PROG])
+	else
+	    AC_MSG_ERROR([No wish found in PATH: $search_path])
+	fi
     fi
     AC_SUBST(WISH_PROG)
 ])
@@ -3686,12 +3723,49 @@ AC_DEFUN(TEA_PATH_CELIB, [
 	    fi
 	])
 	if test x"${ac_cv_c_celibconfig}" = x ; then
-	    CELIB_DIR="# no Celib configs found"
 	    AC_MSG_ERROR([Cannot find celib support library directory])
 	else
 	    no_celib=
 	    CELIB_DIR=${ac_cv_c_celibconfig}
 	    AC_MSG_RESULT([found $CELIB_DIR])
+	    TEA_PATH_NOSPACE(CELIB_DIR, ${ac_cv_c_celibconfig})
+	fi
+    fi
+])
+
+#------------------------------------------------------------------------
+# TEA_PATH_NOSPACE
+#	Ensure that the given path has no spaces.  This is necessary for
+#	CC (and consitutuent vars that build it up) to work in the
+#	tortured autoconf environment.  Currently only for Windows use.
+#
+# Arguments
+#	VAR  - name of the variable to set
+#	PATH - path to ensure no spaces in
+#
+# Results
+#	Sets $VAR to short path of $PATH if it can be found.
+#------------------------------------------------------------------------
+
+AC_DEFUN([TEA_PATH_NOSPACE], [
+    if test "${TEA_PLATFORM}" = "windows" ; then
+	# we need TCLSH_PROG defined to get Windows short pathnames
+	AC_REQUIRE([TEA_PROG_TCLSH])
+
+	AC_MSG_CHECKING([short pathname for $1 ($2)])
+
+	shortpath=
+	case "$2" in
+	    *\ *)
+		# Only do this if we need to.
+		shortpath=`echo "puts [[file attributes {$2} -shortname]] ; exit" | ${TCLSH_PROG} 2>/dev/null`
+		;;
+	esac
+	if test "x${shortpath}" = "x" ; then
+	    AC_MSG_RESULT([not changed])
+	else
+	    $1=$shortpath
+	    AC_MSG_RESULT([${$1}])
 	fi
     fi
 ])
